statum-macros/tests/ui/invalid_machine_builder_duplicate_state_data.stderr
error[E0308]: mismatched types
  --> tests/ui/invalid_machine_builder_duplicate_state_data.rs:28:21
   |
28 |         .state_data(DraftData { title: "second" })
   |          ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `__StatumWorkflowMachineDraftBuilderAlreadySet`, found `DraftData`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/invalid_machine_builder_duplicate_state_data.rs:22:1
   |
22 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
